add /export/sqlite endpoint
